syntax = "proto3";

package api.types;

// the visibility levels
enum VisibilityLevel {
  // the visibility is not specified
  VISIBILITY_LEVEL_UNSPECIFIED = 0;
  // the visibility is hidden
  VISIBILITY_LEVEL_HIDDEN = 1;
  // the visibility is private
  VISIBILITY_LEVEL_PRIVATE = 100;
  // the visibility is restricted
  VISIBILITY_LEVEL_RESTRICTED = 200;
  // the visibility is public
  VISIBILITY_LEVEL_PUBLIC = 300;
}
